--- a/quizInformatica/Pages/Ranking.cshtml
+++ b/quizInformatica/Pages/Ranking.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Ranking de Pontuação</h1>
 
-<table class="table">
+<table class="table table-hover table-borderless">
     <thead>
         <tr>
             <th>Usuário</th>
