--- a/quizInformatica/Pages/Shared/_Layout.cshtml
+++ b/quizInformatica/Pages/Shared/_Layout.cshtml
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/quizInformatica.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
-<body>
+<body class="bg-light">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+
             <div class="container">
                 <a class="navbar-brand text-white" asp-area="" asp-page="/Index">QuizInformatica</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -21,8 +24,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                                                
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Quiz">Jogar</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Ranking">Ranking</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -31,14 +35,14 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-5">
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - quizInformatica 
+            &copy; 2025 - Kennedy S. Arruda 
         </div>
     </footer>
 
